2. Трекер SQL [#1734]